# Alethia

./: .gitignore  CMakeLists.txt  README.md
shaders/: gizmo.vert  grid.frag  grid.vert  line.vert  mesh.frag  mesh.vert  triangle.frag  triangle.vert
src/: AABB.h  AppMode.h  Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  ColorPalette.cpp  ColorPalette.h  CommandPool.cpp  CommandPool.h  CubeMesh.cpp  CubeMesh.h  DebugUI.cpp  DebugUI.h  DepthImage.cpp  DepthImage.h  DevTexture.cpp  DevTexture.h  Device.cpp  Device.h  ExternalTools.cpp  ExternalTools.h  FrameSync.cpp  FrameSync.h  Framebuffer.cpp  Framebuffer.h  GizmoMesh.cpp  GizmoMesh.h  GizmoRenderer.cpp  GizmoRenderer.h  GridRenderer.cpp  GridRenderer.h  ImGuiLayer.cpp  ImGuiLayer.h  InputManager.cpp  InputManager.h  Instance.cpp  Instance.h  LineBatch.cpp  LineBatch.h  (+53 more)
src/ExternalPrograms/: TestBinaryTool
src/alethia_v2/: CMakeLists.txt  VkLogicalDevice.cpp  VkLogicalDevice.h  VkPhysicalDevice.cpp  VkPhysicalDevice.h  VkPipeline.cpp  VkPipeline.h  VkRenderer.cpp  VkRenderer.h  VkSwapchain.cpp  VkSwapchain.h  initv2.cpp  initv2.h  vkInstance.cpp  vkInstance.h
src/alethia_v2/level_editor/grid/: Grid.cpp  Grid.h
src/alethia_v2/shaders/: triangle.frag  triangle.vert
src/alethia_v2/shaders/level_editor/grid/: grid.frag  grid.vert
src/alethia_v3/: AlethiaV3.cpp  AlethiaV3.h  CMakeLists.txt  initVulkan.cpp  initv3.cpp  initv3.h
src/alethia_v3/Vulkan/: createInstance.cpp
src/triangle/: TriangleRenderer.cpp  TriangleRenderer.h
